Running actions on pull requests and removing publishing step

--- a/.github/workflows/on_push_main.yaml
+++ b/.github/workflows/on_push_main.yaml
@@ -1,10 +1,11 @@
-name: on_push_main
+name: on_push
 
 on:
   workflow_dispatch:
   push:
     branches:
       - "main"
+  pull_request:
 
 permissions:
   contents: read
