--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^7.1"
 isort = "^5.10"
 pre-commit = "^2.17"
 nox = "^2022.1"
+changelog-manager = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
