--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = ">=3.7,<4.0"
 structlog = "^21.5"
 typer = "^0.4"
 rich = "^12.0"
-click = "<8.1.0"  # breaks typer 0.4.0
+click = "^8.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1"
