--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ __pycache__
 dist
 build
 .vscode
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
