--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,23 +7,24 @@ license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/micktwomey/clone-repo"
 repository = "https://github.com/micktwomey/clone-repo"
-include = ["CHANGELOG.md", "justfile", "noxfile.py"]
+include = ["CHANGELOG.md", "justfile"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
 structlog = "^21.5"
 typer = "^0.4"
 rich = "^12.0"
-click = "^8.1"
+pyyaml = ">=6.0.1"    # Only needed to force > 6.0.0 to install, cython build issue
 
-[tool.poetry.dev-dependencies]
-black = "^22.1"
-mypy = "^0.941"
-pytest = "^7.1"
-isort = "^5.10"
-pre-commit = "^2.17"
-nox = "^2022.1"
-changelog-manager = "^1.3.0"
+[tool.poetry.group.dev.dependencies]
+black = "*"
+mypy = "*"
+pytest = "*"
+pre-commit = "*"
+changelog-manager = "*"
+ruff = "*"
+pytest-cov = "*"
+coverage = { extras = ["toml"], version = "*" }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -37,3 +38,6 @@ strict = true
 
 [tool.poetry.scripts]
 clone-repo = 'clone_repo.main:app'
+
+[tool.ruff]
+extend-select = ["I"]
