--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ include = ["CHANGELOG.md", "justfile"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-structlog = "^21.5"
-typer = "^0.4"
-rich = "^12.0"
-pyyaml = ">=6.0.1"    # Only needed to force > 6.0.0 to install, cython build issue
+structlog = "^25.4"
+typer = "^0.20"
+rich = "^14.2"
+pyyaml = ">=6.0.1,<7.0.0"    # Only needed to force > 6.0.0 to install, cython build issue
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
